--- a/sass/global/_colours.scss
+++ b/sass/global/_colours.scss
@@ -2,3 +2,5 @@ $colour-black: #000;
 $colour-white: #fff;
 $colour-brightblue: #0076E0;
 $colour-navy: #004A82;
+$colour-scarlet: #D61900;
+$colour-pink: #e31d3b;
