--- a/sass/global/_global.scss
+++ b/sass/global/_global.scss
@@ -8,6 +8,9 @@ $layout-max-width: 1280px;
 $grid-max-width: 1150px;
 $grid-item-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.15);
 
+$general-section-padding: 40px;
+$vertical-rhythm: 25px;
+
 %constrain {
     max-width: $layout-max-width;
     margin: 0 auto;
@@ -24,10 +27,6 @@ body {
     font-family: $font-primary;
     font-weight: $font-weight-normal;
 
-    p {
-        color: $colour-white;
-    }
-
     @include media('>=desktop') {
         height: 100%;
     }
@@ -42,6 +41,10 @@ h1, h2, h3 {
     font-weight: $font-weight-normal;
 }
 
+strong {
+    font-weight: $font-weight-bold;
+}
+
 img {
     max-width: 100%;
     height: auto;
@@ -53,16 +56,20 @@ img {
     width: 100%;
 }
 
+.title {
+    font-family: $font-title;
+    font-weight: $font-weight-bold;
 
-// .title {
-//     @include font-size(33);
-//     @include line-height(40);
+    @include font-size(33);
+    @include line-height(28);
+    margin-bottom: $vertical-rhythm;
 
-//     @include media('>=tablet') {
-//         @include font-size(46);
-//         @include line-height(54);
-//     }
-// }
+    @include media('>=tablet') {
+        @include font-size(40);
+        @include line-height(30);
+    }
+}
+
 
 // .body-copy {
 //     @include line-height(30);
