--- a/sass/modules/_hero.scss
+++ b/sass/modules/_hero.scss
@@ -1,5 +1,8 @@
 .hero {
+	background-image: url('../img/rooftopshot.jpg');
 	background-color: $colour-white;
+	background-repeat: no-repeat;
+	background-size: cover;
 
 	/* Remove once content added */
 	height: 400px;
