--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,218 @@
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}html{height:100%;font-size:62.5%}.cf:after{content:"";display:table;clear:both}body{margin:0 !important;font-size:18px;font-size:1.8rem;line-height:25px;line-height:2.5rem;background-color:#fff;-webkit-font-smoothing:antialiased;font-family:"Lora",serif;font-weight:400}@media (min-width: 1024px){body{height:100%}}::selection{background:#0076E0;color:#fff}h1,h2,h3{font-weight:400}strong{font-weight:700}img{max-width:100%;height:auto}.wrapper{margin:0 auto;max-width:1280px;width:100%}.title{font-family:"Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:700;font-size:33px;font-size:3.3rem;line-height:28px;line-height:2.8rem;margin-bottom:25px}@media (min-width: 768px){.title{font-size:40px;font-size:4rem;line-height:30px;line-height:3rem}}.nav{background:#000;font-family:"Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif}.nav__link{color:#fff}.hero{background-image:url("../img/rooftopshot.jpg");background-color:#fff;background-repeat:no-repeat;background-size:cover;height:400px}.about{background-color:#e31d3b;font-size:0}.about__brief{display:inline-block;width:50%;vertical-align:middle;color:#fff;padding:40px}.about__bio{display:inline-block;width:50%;vertical-align:middle;background-color:#fff;color:#000;padding:40px}.about__keypoints{text-align:right}.about__keypoint{font-size:23px;font-size:2.3rem;line-height:22px;line-height:2.2rem;margin-bottom:25px;font-family:"Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif}.about__intro{font-size:16px;font-size:1.6rem;line-height:19px;line-height:1.9rem;margin-bottom:25px}.about__cta{color:#004A82;text-decoration:none}.grid{font-size:0}.grid__item{font-size:16px;font-size:1.6rem;line-height:21px;line-height:2.1rem;height:0;padding-bottom:100%}@media (min-width: 768px){.grid__item{display:inline-block;vertical-align:top;width:50%;padding-bottom:50%}}.grid__item--image{background-color:#000}.grid__item--text{background-color:#0076E0}
-/*# sourceMappingURL=main.css.map */
+@charset "UTF-8";
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after, q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+/**
+*
+* Border-box sizing by default
+*
+**/
+html {
+  box-sizing: border-box; }
+
+*, *:before, *:after {
+  box-sizing: inherit; }
+
+/**
+*
+* Base font size for REM usage
+*
+**/
+html {
+  height: 100%;
+  font-size: 62.5%; }
+
+/**
+*
+* Clearfix
+*
+**/
+.cf:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+/**
+*
+* Vertical align
+*
+**/
+/**
+*
+* Z-index levels
+*
+**/
+/**
+*
+* REM mixin with pixel fallback
+* -- Eduardo Bouças (https://github.com/eduardoboucas/)
+*
+* NOTE: You must set the font-size to 62.5% on the html element!
+*
+**/
+/**
+*
+* Import fonts
+*
+**/
+/**
+*
+* Page width constrain. Set the max and minimum width and use `@extend %constrain` to constrain the width.
+*
+**/
+body {
+  margin: 0 !important;
+  font-size: 18px;
+  font-size: 1.8rem;
+  line-height: 25px;
+  line-height: 2.5rem;
+  background-color: #fff;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Lora", serif;
+  font-weight: 400; }
+  @media (min-width: 1024px) {
+    body {
+      height: 100%; } }
+
+::selection {
+  background: #0076E0;
+  color: #fff; }
+
+h1, h2, h3 {
+  font-weight: 400; }
+
+strong {
+  font-weight: 700; }
+
+img {
+  max-width: 100%;
+  height: auto; }
+
+.wrapper {
+  margin: 0 auto;
+  max-width: 1280px;
+  width: 100%; }
+
+.title {
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  font-size: 33px;
+  font-size: 3.3rem;
+  line-height: 28px;
+  line-height: 2.8rem;
+  margin-bottom: 25px; }
+  @media (min-width: 768px) {
+    .title {
+      font-size: 40px;
+      font-size: 4rem;
+      line-height: 30px;
+      line-height: 3rem; } }
+
+.nav {
+  background: #000;
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+
+.nav__link {
+  color: #fff; }
+
+.hero {
+  background-image: url("../img/rooftopshot.jpg");
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* Remove once content added */
+  height: 400px; }
+
+.about {
+  background-color: #e31d3b;
+  font-size: 0; }
+
+.about__brief {
+  display: inline-block;
+  width: 50%;
+  vertical-align: middle;
+  color: #fff;
+  padding: 40px; }
+
+.about__bio {
+  display: inline-block;
+  width: 50%;
+  vertical-align: middle;
+  background-color: #fff;
+  color: #000;
+  padding: 40px; }
+
+.about__keypoints,
+.about__reasons {
+  text-align: right; }
+
+.about__keypoint,
+.about__reason {
+  font-size: 23px;
+  font-size: 2.3rem;
+  line-height: 22px;
+  line-height: 2.2rem;
+  margin-bottom: 25px;
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+
+.about__intro {
+  font-size: 16px;
+  font-size: 1.6rem;
+  line-height: 19px;
+  line-height: 1.9rem;
+  margin-bottom: 25px; }
+
+.about__cta {
+  color: #004A82;
+  text-decoration: none; }
+
+.grid {
+  font-size: 0; }
+
+.grid__item {
+  font-size: 16px;
+  font-size: 1.6rem;
+  line-height: 21px;
+  line-height: 2.1rem;
+  /* Set up squares */
+  height: 0;
+  padding-bottom: 100%; }
+  @media (min-width: 768px) {
+    .grid__item {
+      display: inline-block;
+      vertical-align: top;
+      width: 50%;
+      padding-bottom: 50%; } }
+  .grid__item--image {
+    background-color: #000; }
+  .grid__item--text {
+    background-color: #0076E0; }
