--- a/sass/modules/_hero.scss
+++ b/sass/modules/_hero.scss
@@ -1,9 +1,60 @@
 .hero {
-	background-image: url('../img/rooftopshot.jpg');
 	background-color: $colour-white;
-	background-repeat: no-repeat;
-	background-size: cover;
 
-	/* Remove once content added */
-	height: 400px;
+	@include media('>=tablet') {
+		background-image: url('../img/rooftopshot.jpg');
+		background-repeat: no-repeat;
+		background-size: cover;
+		height: 600px;
+	}
+}
+
+.hero__text {
+    padding: 30px 20px;
+    background: $colour-white;
+	
+	@include media('>=tablet') {
+		position: relative;
+	    top: 50%;
+	    transform: translateY(-50%);
+	   	width: 50%;
+	    padding: 40px 30px 30px;
+	    margin: 0 20px;
+	}
+
+	@include media('>=desktop') {
+		width: 30%;
+		margin: 0 70px;
+	}
+}
+
+.hero__image {
+	height: 0;
+	padding-bottom: 100%;
+
+	background-image: url('../img/rooftoop-mobilebg.jpg');
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+
+	@include media('>=tablet') {
+		background-image: none;
+		display: none;
+	}
+}
+
+.hero__title {
+	@include font-size(60);
+    @include line-height(60);
+	margin-bottom: 10px;
+	color: $colour-black;
+	font-weight: bold;
+
+	@include media('>=tablet') {
+		margin-bottom: 25px;
+	}
+}
+
+.hero__intro {
+	@include font-size(22);
+    @include line-height(35);
 }
