--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,8 @@ body {
   color: #fff; }
 
 h1, h2, h3 {
-  font-weight: 400; }
+  font-weight: 400;
+  margin-bottom: 25px; }
 
 strong {
   font-weight: 700; }
@@ -304,6 +305,90 @@ img {
 .about__cta {
   color: #004A82;
   text-decoration: none; }
+
+#form {
+  background-color: #e31d3b;
+  padding: 40px; }
+
+.form {
+  background-color: #fff;
+  padding: 40px;
+  font-size: 0; }
+  @media (min-width: 768px) {
+    .form {
+      width: 60%;
+      margin: 0 auto; } }
+
+.form__title {
+  font-size: 25px;
+  font-size: 2.5rem;
+  line-height: 33px;
+  line-height: 3.3rem;
+  color: #000; }
+
+.form__intro {
+  font-size: 18px;
+  font-size: 1.8rem;
+  line-height: 25px;
+  line-height: 2.5rem;
+  color: #000;
+  margin-bottom: 25px; }
+
+.form__fields {
+  display: block; }
+  @media (min-width: 768px) {
+    .form__fields {
+      display: inline-block;
+      vertical-align: top;
+      width: 50%; } }
+
+/* To do - check opera mini fallback */
+.form__input {
+  width: 80%;
+  font-size: 18px;
+  font-size: 1.8rem;
+  line-height: 25px;
+  line-height: 2.5rem; }
+
+.form__error-message {
+  color: red;
+  font-size: 18px;
+  font-size: 1.8rem;
+  line-height: 25px;
+  line-height: 2.5rem;
+  opacity: 0; }
+
+.form__options {
+  font-size: 18px;
+  font-size: 1.8rem;
+  line-height: 25px;
+  line-height: 2.5rem;
+  margin: 30px 0 5px; }
+
+.form__comments {
+  font-size: 18px;
+  font-size: 1.8rem;
+  line-height: 25px;
+  line-height: 2.5rem; }
+
+.form__comment {
+  width: 100%;
+  height: 100px; }
+
+.form__submit {
+  text-align: right; }
+
+.form__button {
+  background-color: green;
+  color: white;
+  border-radius: 3px;
+  border: 2px solid green;
+  padding: 5px 10px;
+  font-size: 18px;
+  font-size: 1.8rem;
+  line-height: 25px;
+  line-height: 2.5rem;
+  cursor: pointer; }
 
 .grid {
   font-size: 0; }
