--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,5 +15,6 @@
 @import 'modules/_nav';
 @import 'modules/_hero';
 @import 'modules/_about';
+@import 'modules/_form';
 @import 'modules/_grid';
 @import 'modules/_carousel';
