--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,5 +16,7 @@
 @import 'modules/_hero';
 @import 'modules/_about';
 @import 'modules/_form';
+@import 'modules/_footer';
 @import 'modules/_grid';
 @import 'modules/_carousel';
+@import 'modules/_testimonials';
