--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -4,7 +4,7 @@
 }
 
 .about__brief {
-	padding: 50px 20px 30px;
+	padding: 70px 20px 40px;
 	vertical-align: middle;
     color: $colour-white;
     text-align: left;
@@ -25,7 +25,7 @@
 		vertical-align: middle;
 		background-color: $colour-white;
 	    color: $colour-black;
-	    padding: 40px 20px 20px;
+	    padding: 60px 20px 35px;
     }
 }
 
@@ -45,6 +45,10 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	padding: $general-section-padding;
+
+	@include media('>=desktop') {
+		padding: 80px;
+	}	
 }
 
 .about__text {
@@ -60,19 +64,15 @@
     	margin: 40px;
     	opacity: 0.9;
     }
-	
-	@include media('>=desktop') {
-		width: 40%;
-	}
 }
 
 .about__divider {
 	width: 60%;
-	margin: 0 auto 45px;
+	margin: 0 auto 55px;
 	border: 0;
     height: 1px;
     background: #fff;
-
+	
     @include media('>=tablet') {
     	display: none;
     }
