--- a/sass/modules/_hero.scss
+++ b/sass/modules/_hero.scss
@@ -10,15 +10,19 @@
 }
 
 .hero__text {
-    padding: 30px 20px;
+    padding: 40px;
     background: $colour-white;
 	
+    @include media('>=400px') {
+    	padding: 50px 40px;
+    }
+
 	@include media('>=tablet') {
 		position: relative;
 	    top: 50%;
 	    transform: translateY(-50%);
 	   	width: 50%;
-	    padding: 40px 30px 30px;
+	    padding: 40px 40px 30px;
 	    margin: 0 20px;
 	}
 
