Add tiny styling edits for footer and nav

--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
 	background-color: $colour-black;
 	color: $colour-white;
+	border-top: 2px solid $colour-brightblue;
 	padding: 30px 20px;
 }
 
