--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -11,11 +11,11 @@
 
 .nav__item {
 	display: inline-block;
-    padding: 0 10px;
+    padding: 0 7px;
     @include font-size(15);
     @include line-height(18);
 
-	@include media('>=tablet') {
+	@include media('>=400px') {
 		@include font-size(18);
     	@include line-height(25);
     	padding: 0 20px;
