--- a/css/main.css
+++ b/css/main.css
@@ -149,12 +149,12 @@ img {
 
 .nav__item {
   display: inline-block;
-  padding: 0 10px;
+  padding: 0 7px;
   font-size: 15px;
   font-size: 1.5rem;
   line-height: 18px;
   line-height: 1.8rem; }
-  @media (min-width: 768px) {
+  @media (min-width: 400px) {
     .nav__item {
       font-size: 18px;
       font-size: 1.8rem;
@@ -175,15 +175,18 @@ img {
       height: 600px; } }
 
 .hero__text {
-  padding: 30px 20px;
+  padding: 40px;
   background: #fff; }
+  @media (min-width: 400px) {
+    .hero__text {
+      padding: 50px 40px; } }
   @media (min-width: 768px) {
     .hero__text {
       position: relative;
       top: 50%;
       transform: translateY(-50%);
       width: 50%;
-      padding: 40px 30px 30px;
+      padding: 40px 40px 30px;
       margin: 0 20px; } }
   @media (min-width: 1024px) {
     .hero__text {
@@ -224,9 +227,10 @@ img {
   font-size: 0; }
 
 .about__brief {
-  padding: 70px 20px 40px;
-  vertical-align: middle;
+  background-color: #e31d3b;
   color: #fff;
+  padding: 40px 40px 15px;
+  vertical-align: middle;
   text-align: left; }
   @media (min-width: 768px) {
     .about__brief {
@@ -234,16 +238,15 @@ img {
       width: 50%; } }
 
 .about__bio {
-  padding: 0 20px 40px;
-  color: white; }
+  background-color: #fff;
+  padding: 40px 40px 15px;
+  color: #000; }
   @media (min-width: 768px) {
     .about__bio {
       display: inline-block;
       width: 50%;
       vertical-align: middle;
-      background-color: #fff;
-      color: #000;
-      padding: 60px 20px 35px; } }
+      padding: 80px 40px 55px; } }
 
 .about__intro {
   font-size: 18px;
@@ -278,22 +281,18 @@ img {
       margin: 40px;
       opacity: 0.9; } }
 
-.about__divider {
-  width: 60%;
-  margin: 0 auto 55px;
-  border: 0;
-  height: 1px;
-  background: #fff; }
-  @media (min-width: 768px) {
-    .about__divider {
-      display: none; } }
-
 .about__keypoint {
-  font-size: 23px;
-  font-size: 2.3rem;
-  line-height: 22px;
-  line-height: 2.2rem;
+  font-size: 20px;
+  font-size: 2rem;
+  line-height: 27px;
+  line-height: 2.7rem;
   margin-bottom: 25px; }
+  @media (min-width: 768px) {
+    .about__keypoint {
+      font-size: 23px;
+      font-size: 2.3rem;
+      line-height: 22px;
+      line-height: 2.2rem; } }
 
 .about__reason {
   font-size: 18px;
@@ -307,56 +306,100 @@ img {
   text-decoration: none; }
 
 #form {
-  background-color: #e31d3b;
+  background-color: #0076E0;
   padding: 40px; }
+  @media (min-width: 430px) {
+    #form {
+      background-image: url("../img/bg-form--large.jpg");
+      background-repeat: no-repeat;
+      background-size: cover; } }
+  @media (min-width: 768px) {
+    #form {
+      padding: 80px; } }
 
 .form {
-  background-color: #fff;
-  padding: 40px;
-  font-size: 0; }
-  @media (min-width: 768px) {
+  font-size: 0;
+  opacity: 0.9;
+  color: #fff; }
+  @media (min-width: 430px) {
     .form {
-      width: 60%;
-      margin: 0 auto; } }
+      margin: 0 auto;
+      background-color: #fff;
+      color: #000;
+      border-radius: 10px;
+      padding: 40px; } }
+  @media (min-width: 900px) {
+    .form {
+      width: 80%; } }
+  @media (min-width: 1024px) {
+    .form {
+      width: 60%; } }
 
 .form__title {
   font-size: 25px;
   font-size: 2.5rem;
   line-height: 33px;
   line-height: 3.3rem;
-  color: #000; }
+  text-align: center;
+  margin-bottom: 10px;
+  font-weight: 700; }
+  @media (min-width: 430px) {
+    .form__title {
+      width: 80%;
+      margin: 0 auto 10px; } }
 
 .form__intro {
   font-size: 18px;
   font-size: 1.8rem;
   line-height: 25px;
   line-height: 2.5rem;
-  color: #000;
-  margin-bottom: 25px; }
+  margin-bottom: 40px;
+  text-align: center; }
+  @media (min-width: 430px) {
+    .form__intro {
+      width: 80%;
+      margin: 0 auto 40px; } }
 
-.form__fields {
+.form__field {
+  position: relative;
+  padding-bottom: 30px; }
+
+.form__label {
+  font-size: 18px;
+  font-size: 1.8rem;
+  line-height: 30px;
+  line-height: 3rem;
   display: block; }
-  @media (min-width: 768px) {
-    .form__fields {
-      display: inline-block;
-      vertical-align: top;
-      width: 50%; } }
+  @media (min-width: 430px) {
+    .form__label {
+      width: 80%;
+      margin: 0 auto; } }
 
 /* To do - check opera mini fallback */
 .form__input {
-  width: 80%;
+  display: block;
+  width: 100%;
   font-size: 18px;
   font-size: 1.8rem;
-  line-height: 25px;
-  line-height: 2.5rem; }
+  line-height: 30px;
+  line-height: 3rem; }
+  @media (min-width: 430px) {
+    .form__input {
+      width: 80%;
+      margin: 0 auto; } }
 
 .form__error-message {
+  position: absolute;
   color: red;
-  font-size: 18px;
-  font-size: 1.8rem;
-  line-height: 25px;
-  line-height: 2.5rem;
-  opacity: 0; }
+  font-size: 16px;
+  font-size: 1.6rem;
+  line-height: 21px;
+  line-height: 2.1rem;
+  opacity: 0;
+  top: -20px; }
+  @media (min-width: 430px) {
+    .form__error-message {
+      padding-left: 10%; } }
 
 .form__options {
   font-size: 18px;
@@ -370,29 +413,49 @@ img {
   font-size: 1.8rem;
   line-height: 25px;
   line-height: 2.5rem; }
+  @media (min-width: 430px) {
+    .form__comments {
+      width: 80%;
+      margin: 0 auto; } }
 
 .form__comment {
   width: 100%;
-  height: 100px; }
+  height: 100px;
+  margin-bottom: 25px; }
+  @media (min-width: 430px) {
+    .form__comment {
+      display: block;
+      width: 80%;
+      margin: 0 auto 40px; } }
 
 .form__submit {
   text-align: right; }
+  @media (min-width: 430px) {
+    .form__submit {
+      padding-right: 10%; } }
 
 .form__button {
-  background-color: green;
+  display: inline-block;
+  background-color: #0076E0;
   color: white;
   border-radius: 3px;
-  border: 2px solid green;
-  padding: 5px 10px;
+  border: 2px solid #0076E0;
+  padding: 10px 25px;
+  margin-bottom: 25px;
   font-size: 18px;
   font-size: 1.8rem;
   line-height: 25px;
   line-height: 2.5rem;
-  cursor: pointer; }
+  cursor: pointer;
+  transition: all 0.3s ease-in; }
+  .form__button:hover {
+    color: #0076E0;
+    background-color: #fff; }
 
 .footer {
   background-color: #000;
   color: #fff;
+  border-top: 2px solid #0076E0;
   padding: 30px 20px; }
 
 @media (min-width: 768px) {
@@ -425,16 +488,18 @@ img {
 .grid {
   font-size: 0; }
 
+@media (min-width: 1300px) {
+  .grid__flex-container {
+    display: flex;
+    flex-direction: row-reverse; } }
+
 .grid__item {
   font-size: 16px;
   font-size: 1.6rem;
   line-height: 21px;
-  line-height: 2.1rem; }
-  .grid__item--image {
-    background-color: #0076E0; }
-  .grid__item--text {
-    background-color: #fff; }
-  @media (min-width: 768px) {
+  line-height: 2.1rem;
+  background-color: #fff; }
+  @media (min-width: 1300px) {
     .grid__item {
       display: inline-block;
       vertical-align: top;
@@ -443,8 +508,17 @@ img {
       height: 0;
       padding-bottom: 50%; } }
 
+.grid__image {
+  display: block; }
+
 .grid__text {
-  padding: 80px; }
+  padding: 40px; }
+  @media (min-width: 768px) {
+    .grid__text {
+      padding: 50px; } }
+  @media (min-width: 1350px) {
+    .grid__text {
+      padding: 80px; } }
 
 .grid__title {
   font-size: 45px;
@@ -481,68 +555,118 @@ img {
   padding-left: 10px; }
 
 .grid__cta {
+  display: inline-block;
   background: transparent;
   border: 2px solid #0076E0;
   color: #0076E0;
-  padding: 10px 20px;
-  margin-bottom: 20px;
-  font-size: 25px; }
+  padding: 15px 25px;
+  margin-bottom: 25px;
+  font-size: 25px;
+  border-radius: 3px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease-in; }
+  .grid__cta:hover {
+    color: #fff;
+    background-color: #0076E0; }
 
 .testimonials {
   position: relative;
-  background-color: #fff; }
-  @media (min-width: 768px) {
+  background-color: #0076E0;
+  padding: 40px 10px 15px; }
+  @media (min-width: 400px) {
     .testimonials {
+      padding: 40px 40px 15px;
       background-image: url("../img/bg-image-shard--large.jpg");
       background-repeat: no-repeat;
       background-size: cover;
-      height: 800px; } }
+      background-position: 50% 50%; } }
+  @media (min-width: 900px) {
+    .testimonials {
+      /* Setting height as children are all position absolute */
+      height: 1000px; } }
 
 .testimonial {
   border-radius: 50%;
-  background-color: #fff;
-  position: absolute;
   width: 300px;
-  height: 300px; }
-  .testimonial--one {
-    top: 450px;
-    left: 250px;
-    opacity: 0.85;
-    /*border: 3px solid $colour-brightblue;*/ }
+  height: 300px;
+  background-color: #fff;
+  opacity: 0.85;
+  margin: 0 auto 50px;
+  /*&--isvisible {
+		transform: none;
+		animation: come-in 0.8s ease forwards;
+	}*/ }
   .testimonial--two {
-    top: 20px;
-    left: 20px;
-    width: 420px;
-    height: 420px;
-    opacity: 0.75;
-    /* border: 3px solid $colour-pink;*/ }
-  .testimonial--three {
-    top: 70px;
-    left: 1030px;
-    width: 350px;
-    height: 350px;
-    opacity: 0.75;
-    /*border: 3px solid $colour-brightblue;*/ }
-  .testimonial--four {
-    top: 450px;
-    left: 900px;
-    opacity: 0.85;
-    /*border: 3px solid $colour-pink;*/ }
+    display: none; }
+  .testimonial--three .testimonial__text {
+    padding-right: 5px; }
+  @media (min-width: 768px) {
+    .testimonial {
+      width: 370px;
+      height: 370px; } }
+  @media (min-width: 900px) {
+    .testimonial {
+      position: absolute;
+      margin-bottom: 0;
+      width: 300px;
+      height: 300px; }
+      .testimonial--one {
+        top: 540px;
+        left: 5%;
+        /*border: 3px solid $colour-brightblue;*/ }
+      .testimonial--two {
+        display: inline-block;
+        top: 80px;
+        left: 5%;
+        width: 420px;
+        height: 420px;
+        /* border: 3px solid $colour-pink;*/ }
+      .testimonial--three {
+        width: 350px;
+        height: 350px;
+        top: 80px;
+        right: 5%;
+        /*border: 3px solid $colour-brightblue;*/ }
+      .testimonial--four {
+        top: 470px;
+        right: 5%; } }
+  @media (min-width: 1024px) {
+    .testimonial--one {
+      left: 10%;
+      /*border: 3px solid $colour-brightblue;*/ }
+    .testimonial--three {
+      top: 70px;
+      /*border: 3px solid $colour-brightblue;*/ }
+    .testimonial--four {
+      right: 10%; } }
 
+/*@keyframes come-in {
+  to { transform: scale(10,10); }
+}*/
 .testimonial__text {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
-  width: 75%;
+  width: 69%;
   margin: 0 auto; }
+  @media (min-width: 768px) {
+    .testimonial__text {
+      width: 75%; } }
 
 .testimonial__quote {
-  font-size: 18px;
-  font-size: 1.8rem;
-  line-height: 25px;
-  line-height: 2.5rem;
+  font-size: 17px;
+  font-size: 1.7rem;
+  line-height: 23px;
+  line-height: 2.3rem;
   padding: 0 15px;
   margin-bottom: 10px; }
+  @media (min-width: 768px) {
+    .testimonial__quote {
+      font-size: 18px;
+      font-size: 1.8rem;
+      line-height: 25px;
+      line-height: 2.5rem; } }
 
 .testimonial__source,
 .testimonial__company,
@@ -551,6 +675,11 @@ img {
   font-size: 1.6rem;
   line-height: 20px;
   line-height: 2rem;
-  margin-bottom: 5px;
+  margin-bottom: 3px;
   text-align: right;
   font-weight: bold; }
+  @media (min-width: 768px) {
+    .testimonial__source,
+    .testimonial__company,
+    .testimonial__job {
+      margin-bottom: 5px; } }
