--- a/css/main.css
+++ b/css/main.css
@@ -149,30 +149,44 @@ img {
 
 .nav__item {
   display: inline-block;
-  padding: 0 7px;
+  padding: 0 5px;
   font-size: 15px;
   font-size: 1.5rem;
-  line-height: 18px;
-  line-height: 1.8rem; }
+  line-height: 19px;
+  line-height: 1.9rem; }
   @media (min-width: 400px) {
+    .nav__item {
+      font-size: 15px;
+      font-size: 1.5rem;
+      line-height: 19px;
+      line-height: 1.9rem;
+      padding: 0 20px; } }
+  @media (min-width: 768px) {
     .nav__item {
       font-size: 18px;
       font-size: 1.8rem;
       line-height: 25px;
-      line-height: 2.5rem;
-      padding: 0 20px; } }
+      line-height: 2.5rem; } }
 
 .nav__link {
-  color: #fff; }
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.2s ease-in; }
+  .nav__link:hover {
+    text-decoration: underline; }
 
 .hero {
   background-color: #fff; }
   @media (min-width: 768px) {
     .hero {
-      background-image: url("../img/rooftopshot.jpg");
+      background-image: url("../img/rooftop--desktopbg.jpg");
       background-repeat: no-repeat;
       background-size: cover;
+      background-position-x: right;
       height: 600px; } }
+  @media (min-width: 1024px) {
+    .hero {
+      height: 700px; } }
 
 .hero__text {
   padding: 40px;
@@ -187,7 +201,11 @@ img {
       transform: translateY(-50%);
       width: 50%;
       padding: 40px 40px 30px;
-      margin: 0 20px; } }
+      margin: 0 20px;
+      opacity: 0.85; } }
+  @media (min-width: 1000px) {
+    .hero__text {
+      opacity: 0.95; } }
   @media (min-width: 1024px) {
     .hero__text {
       width: 40%;
@@ -205,15 +223,39 @@ img {
       display: none; } }
 
 .hero__title {
-  font-size: 60px;
-  font-size: 6rem;
-  line-height: 60px;
-  line-height: 6rem;
+  font-size: 50px;
+  font-size: 5rem;
+  line-height: 50px;
+  line-height: 5rem;
   margin-bottom: 10px;
   color: #000;
   font-weight: bold; }
+  @media (min-width: 400px) {
+    .hero__title {
+      font-size: 60px;
+      font-size: 6rem;
+      line-height: 60px;
+      line-height: 6rem; } }
   @media (min-width: 768px) {
     .hero__title {
+      margin-bottom: 25px; } }
+
+.hero__sub {
+  font-size: 30px;
+  font-size: 3rem;
+  line-height: 30px;
+  line-height: 3rem;
+  margin-bottom: 10px;
+  color: #004A82;
+  font-weight: bold; }
+  @media (min-width: 400px) {
+    .hero__sub {
+      font-size: 40px;
+      font-size: 4rem;
+      line-height: 40px;
+      line-height: 4rem; } }
+  @media (min-width: 768px) {
+    .hero__sub {
       margin-bottom: 25px; } }
 
 .hero__intro {
@@ -286,13 +328,25 @@ img {
   font-size: 2rem;
   line-height: 27px;
   line-height: 2.7rem;
-  margin-bottom: 25px; }
+  margin-bottom: 30px; }
   @media (min-width: 768px) {
     .about__keypoint {
       font-size: 23px;
       font-size: 2.3rem;
-      line-height: 22px;
-      line-height: 2.2rem; } }
+      line-height: 27px;
+      line-height: 2.7rem; } }
+
+.about__bullet {
+  display: inline-block;
+  vertical-align: middle;
+  width: 20px;
+  margin-right: 10px;
+  font-size: 20px; }
+
+.about__bullet-text {
+  display: inline-block;
+  vertical-align: middle;
+  width: calc(100% - 40px); }
 
 .about__reason {
   font-size: 18px;
@@ -436,8 +490,6 @@ img {
 
 .form__button {
   display: inline-block;
-  background-color: #0076E0;
-  color: white;
   border-radius: 3px;
   border: 2px solid #0076E0;
   padding: 10px 25px;
@@ -447,25 +499,35 @@ img {
   line-height: 25px;
   line-height: 2.5rem;
   cursor: pointer;
-  transition: all 0.3s ease-in; }
+  transition: all 0.3s ease-in;
+  background-color: #fff;
+  color: #0076E0; }
   .form__button:hover {
-    color: #0076E0;
-    background-color: #fff; }
+    color: #fff;
+    background-color: #0076E0;
+    border: 2px solid #fff; }
+  @media (min-width: 430px) {
+    .form__button {
+      background-color: #0076E0;
+      color: #fff; }
+      .form__button:hover {
+        color: #0076E0;
+        background-color: #fff;
+        border: 2px solid #0076E0; } }
 
 .footer {
   background-color: #000;
   color: #fff;
-  border-top: 2px solid #0076E0;
   padding: 30px 20px; }
 
-@media (min-width: 768px) {
+@media (min-width: 1000px) {
   .footer__date {
     display: inline-block;
     vertical-align: top;
     width: 33.33333%;
     margin-right: -4px; } }
 
-@media (min-width: 768px) {
+@media (min-width: 1000px) {
   .footer__contact {
     display: inline-block;
     vertical-align: top;
@@ -473,13 +535,15 @@ img {
     margin-right: -4px;
     text-align: center; } }
 
-@media (min-width: 768px) {
-  .footer__slogan {
-    display: inline-block;
-    vertical-align: top;
-    width: 33.33333%;
-    margin-right: -4px;
-    text-align: right; } }
+.footer__slogan {
+  color: #0076E0; }
+  @media (min-width: 1000px) {
+    .footer__slogan {
+      display: inline-block;
+      vertical-align: top;
+      width: 33.33333%;
+      margin-right: -4px;
+      text-align: right; } }
 
 .footer__mailto {
   color: #fff;
@@ -488,7 +552,7 @@ img {
 .grid {
   font-size: 0; }
 
-@media (min-width: 1300px) {
+@media (min-width: 1000px) {
   .grid__flex-container {
     display: flex;
     flex-direction: row-reverse; } }
@@ -499,7 +563,7 @@ img {
   line-height: 21px;
   line-height: 2.1rem;
   background-color: #fff; }
-  @media (min-width: 1300px) {
+  @media (min-width: 1000px) {
     .grid__item {
       display: inline-block;
       vertical-align: top;
@@ -532,12 +596,30 @@ img {
     .grid__title {
       margin-bottom: 25px; } }
 
+@media (min-width: 1000px) and (max-width: 1149px) {
+  .grid__title {
+    font-size: 35px;
+    font-size: 3.5rem;
+    line-height: 35px;
+    line-height: 3.5rem; } }
+
 .grid__intro {
   font-size: 19px;
   font-size: 1.9rem;
   line-height: 27px;
   line-height: 2.7rem;
   margin-bottom: 25px; }
+
+@media (min-width: 1000px) and (max-width: 1149px) {
+  .grid__intro {
+    font-size: 17px;
+    font-size: 1.7rem;
+    line-height: 22px;
+    line-height: 2.2rem; } }
+
+@media (min-width: 1000px) and (max-width: 1149px) {
+  .grid__intro--extra {
+    display: none; } }
 
 .grid__list {
   margin-bottom: 25px;
@@ -554,6 +636,13 @@ img {
   font-weight: 400;
   padding-left: 10px; }
 
+@media (min-width: 1000px) and (max-width: 1149px) {
+  .grid__list-item {
+    font-size: 17px;
+    font-size: 1.7rem;
+    line-height: 22px;
+    line-height: 2.2rem; } }
+
 .grid__cta {
   display: inline-block;
   background: transparent;
@@ -562,6 +651,7 @@ img {
   padding: 15px 25px;
   margin-bottom: 25px;
   font-size: 25px;
+  font-size: 2.5rem;
   border-radius: 3px;
   text-decoration: none;
   cursor: pointer;
@@ -570,9 +660,14 @@ img {
     color: #fff;
     background-color: #0076E0; }
 
+@media (min-width: 1000px) and (max-width: 1149px) {
+  .grid__cta {
+    font-size: 21px;
+    font-size: 2.1rem; } }
+
 .testimonials {
   position: relative;
-  background-color: #0076E0;
+  background-color: #004A82;
   padding: 40px 10px 15px; }
   @media (min-width: 400px) {
     .testimonials {
@@ -587,12 +682,14 @@ img {
       height: 1000px; } }
 
 .testimonial {
+  border: 2px solid #fff;
   border-radius: 50%;
   width: 300px;
   height: 300px;
   background-color: #fff;
   opacity: 0.85;
   margin: 0 auto 50px;
+  transition: border 0.3s ease-in;
   /*&--isvisible {
 		transform: none;
 		animation: come-in 0.8s ease forwards;
@@ -604,7 +701,10 @@ img {
   @media (min-width: 768px) {
     .testimonial {
       width: 370px;
-      height: 370px; } }
+      height: 370px; }
+      .testimonial:hover {
+        cursor: pointer;
+        border: 2px solid #004A82; } }
   @media (min-width: 900px) {
     .testimonial {
       position: absolute;
@@ -613,31 +713,26 @@ img {
       height: 300px; }
       .testimonial--one {
         top: 540px;
-        left: 5%;
-        /*border: 3px solid $colour-brightblue;*/ }
+        left: 5%; }
       .testimonial--two {
         display: inline-block;
         top: 80px;
         left: 5%;
         width: 420px;
-        height: 420px;
-        /* border: 3px solid $colour-pink;*/ }
+        height: 420px; }
       .testimonial--three {
         width: 350px;
         height: 350px;
         top: 80px;
-        right: 5%;
-        /*border: 3px solid $colour-brightblue;*/ }
+        right: 5%; }
       .testimonial--four {
         top: 470px;
         right: 5%; } }
   @media (min-width: 1024px) {
     .testimonial--one {
-      left: 10%;
-      /*border: 3px solid $colour-brightblue;*/ }
+      left: 10%; }
     .testimonial--three {
-      top: 70px;
-      /*border: 3px solid $colour-brightblue;*/ }
+      top: 70px; }
     .testimonial--four {
       right: 10%; } }
 
