Styling tweaks given updated content

--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -1,10 +1,10 @@
 .about {
-	background-color: $colour-pink;
+	background-color: $colour-navy;
 	font-size: 0;
 }
 
 .about__brief {
-	background-color: $colour-pink;
+	background-color: $colour-navy;
 	color: $colour-white;
 	padding: 40px 40px 15px;
 	vertical-align: middle;
