--- a/sass/modules/_hero.scss
+++ b/sass/modules/_hero.scss
@@ -27,7 +27,7 @@
 	    top: 50%;
 	    transform: translateY(-50%);
 	   	width: 50%;
-	    padding: 40px 40px 30px;
+	    padding: 40px;
 	    margin: 0 20px;
 	    opacity: 0.85;
 	}
@@ -37,7 +37,7 @@
 	}
 
 	@include media('>=desktop') {
-		width: 40%;
+		width: 42%;
 		margin: 0 70px;
 	}
 }
