--- a/sass/modules/_grid.scss
+++ b/sass/modules/_grid.scss
@@ -30,7 +30,11 @@
 }
 
 .grid__text {
-	padding: 40px;
+	padding: 30px;
+
+	@include media('>=500px') {
+        padding: 40px;
+    }
 	
 	@include media('>=tablet') {
 		padding: 50px;
@@ -102,7 +106,7 @@
     color: $colour-brightblue;
     padding: 15px 25px;
     margin-bottom: $vertical-rhythm;
-    @include font-size(25);
+    @include font-size(22);
     border-radius: 3px;
     text-decoration: none;
     cursor: pointer;
@@ -111,6 +115,10 @@
     &:hover {
     	color: $colour-white;
     	background-color: $colour-brightblue;
+    }
+
+    @include media('>=400px') {
+    	@include font-size(25);
     }
 
     @include media('>=1000px', '<1150px') {
